WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235205
Unable to have new lines in HTMLTextArea's placeholder text
https://bugs.webkit.org/show_bug.cgi?id=235205
Summary
Unable to have new lines in HTMLTextArea's placeholder text
Chris Dumez
Reported
2022-01-13 14:21:47 PST
Unable to have new lines in HTMLTextArea's placeholder text. This doesn't match the HTML specification [1] or the behavior or Chrome & Firefox. [1]
https://html.spec.whatwg.org/multipage/form-elements.html#attr-textarea-placeholder
Attachments
Patch
(8.71 KB, patch)
2022-01-13 14:30 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(8.33 KB, patch)
2022-01-13 16:39 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-01-13 14:30:51 PST
Created
attachment 449112
[details]
Patch
Chris Dumez
Comment 2
2022-01-13 16:39:00 PST
Created
attachment 449124
[details]
Patch
EWS
Comment 3
2022-01-13 19:15:41 PST
Committed
r288005
(
246031@main
): <
https://commits.webkit.org/246031@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449124
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-01-13 19:16:17 PST
<
rdar://problem/87583359
>
Alexey Proskuryakov
Comment 5
2022-01-19 13:04:51 PST
Chris, did this fix
bug 217837
and/or
bug 156399
?
Chris Dumez
Comment 6
2022-01-19 13:07:52 PST
(In reply to Alexey Proskuryakov from
comment #5
)
> Chris, did this fix
bug 217837
and/or
bug 156399
?
I will check shortly and report back. Thanks for the heads up.
Chris Dumez
Comment 7
2022-01-19 15:24:32 PST
***
Bug 217837
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 8
2022-01-19 15:30:36 PST
(In reply to Chris Dumez from
comment #6
)
> (In reply to Alexey Proskuryakov from
comment #5
) > > Chris, did this fix
bug 217837
and/or
bug 156399
? > > I will check shortly and report back. Thanks for the heads up.
Yes, it fixed one of those. The other one no longer reproduces in shipping so it very likely got fixed but not by my change. I closed both bugs, thanks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug