Unable to have new lines in HTMLTextArea's placeholder text https://bugs.webkit.org/show_bug.cgi?id=235205

Reviewed by Wenson Hsieh.

Source/WebCore:

Unlike the placeholder for HTMLInputElement, the placeholder for HTMLTextAreaElement needs
to allow new lines as per:
- https://html.spec.whatwg.org/multipage/form-elements.html#attr-textarea-placeholder

This aligns our behavior with Blink and Gecko.

No new tests, unskipped existing WPT tests.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::placeholder const):
* html/HTMLInputElement.h:
* html/HTMLTextAreaElement.cpp:
(WebCore::HTMLTextAreaElement::updatePlaceholderText):
* html/HTMLTextFormControlElement.cpp:
(WebCore::HTMLTextFormControlElement::strippedPlaceholder const): Deleted.
* html/HTMLTextFormControlElement.h:
* html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::updatePlaceholderText):

LayoutTests:

Unskip WPT tests that are no longer failing.

* TestExpectations:



Canonical link: https://commits.webkit.org/246031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288005 268f45cc-cd09-0410-ab3c-d52691b4dbfc